# Freenove_Robot_Dog_Kit_for_ESP32

./: readme.md
Client/ESP32_dog_software_code/: Command.py  Thread.py  WiFi.txt  action.py  calibration.py  configuration.py  file.py  firmware.py  led.py  main.py  ui_calibration.py  ui_configuration.py  ui_dance.py  ui_led.py  ui_main.py
Client/ESP32_dog_software_package/: ReadMeFirst.txt  WiFi.txt
Client/ESP32_dog_software_setup/: setup_mac.py
Code/MAC OS/: mac.py
Code/Windows/: Upload the bin.bat  windows.bat
Firmware/Linux/: Linux.py
Firmware/Windows/: windows.bat
Sketches/Sketch_01_Battery/: BatteryPower.cpp  BatteryPower.h  Sketch_01_Battery.ino
Sketches/Sketch_02_BuiltInLed/: BuiltInLed.cpp  BuiltInLed.h  Sketch_02_BuiltInLed.ino
Sketches/Sketch_03_Buzzer/: Buzzer.cpp  Buzzer.h  NoteFrequency.h  Sketch_03_Buzzer.ino
Sketches/Sketch_10_Dog/: BatteryPower.cpp  BatteryPower.h  BluetoothOrders.h  BluetoothService.cpp  BluetoothService.h  BuiltInLed.cpp  BuiltInLed.h  Buzzer.cpp  Buzzer.h  CMakeLists.txt  CameraService.cpp  CameraService.h  DanceMovements.cpp  DanceMovements.h  Freenove_PCA9685.cpp  Freenove_PCA9685.h  MassageQueue.cpp  MassageQueue.h  MessageParser.cpp  MessageParser.h  Motion.cpp  Motion.h  PreferencesPro.cpp  PreferencesPro.h  Public.cpp  Public.h  RGBLED_WS2812.cpp  RGBLED_WS2812.h  RobotDefinitions.cpp  RobotDefinitions.h  Sketch_10_Dog.ino  TaskCommandService.cpp  TaskCommandService.h  TaskManager.cpp  TaskManager.h  TaskMotionService.cpp  TaskMotionService.h  TouchPad.cpp  TouchPad.h  UltrasonicRanging.cpp  (+1 more)
(+55 files in other folders)
